# layout

./: .gitignore  README.md  ni-to-mpc-converter-app-outline.md  package.json
.github/workflows/: build-desktop.yml
ni_mpc_converter/: README.md  __init__.py  pyproject.toml
ni_mpc_converter/app/: __init__.py  audio.py  classifier.py  cli.py  convert.py  desktop.py  mapper.py  models.py  parser_maschine.py  scanner.py  web.py  writer_xtd.py
ni_mpc_converter/tests/: test_darkchild_profile.py
ni_mpc_converter/web/: index.html  tsconfig.json
ni_mpc_converter/web/src/: app.ts
ni_mpc_converter/web/static/: app.js  styles.css
